--- a/style-dieu-khien-quat.css
+++ b/style-dieu-khien-quat.css
@@ -439,8 +439,8 @@ margin: 0%;
   top: 30px;
   width: 260px;
   height: 210px;
-  background-image: linear-gradient(rgb(41, 133, 125), rgb(108, 216, 219) );
-  
+  /* background-image: linear-gradient(rgb(41, 133, 125), rgb(108, 216, 219) ); */
+  background-color: rgb(41, 133, 125);
   /* border-style: solid ; */
   /* border-width: 1px; */
 }
@@ -456,7 +456,8 @@ margin: 0%;
   top: 30px;
   width: 260px;
   height: 210px;
-  background-image: linear-gradient(rgba(49,85,165), rgb(108, 216, 219));
+  /* background-image: linear-gradient(rgba(49,85,165), rgb(108, 216, 219)); */
+  background-color: rgba(49,85,165);
 }
 #box-manual p {
   color: white;
@@ -664,7 +665,7 @@ input:checked + .slider5:before {
   width: 150px;
   height: 20px;
   padding: 2px;
-  background-image: linear-gradient(to right, rgb(203, 115, 221) , rgba(49,85,165));
+  background-image: linear-gradient(to right , rgb(24, 247, 191), rgb(155, 196, 42));
   border: 1px solid black;
   text-align: center;
   font-weight: bold;
